[package]
name = "pngme"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crc = "3.3.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
redundant_closure_for_method_call = "allow"
